--- a/ClientApp/src/app/shared/header/header.component.html
+++ b/ClientApp/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- sidebar should be hide on role base -->
 
 <!-- header start -->
-<header class="header" *ngIf="firstName">
+<header class="header" *ngIf="sharedService.isLoggedIn()">
   <div class="header-container">
     <div class="nav-logo">
       <!-- <a class="sidenav-fold-toggler" href="javascript:void(0);">
@@ -15,7 +15,7 @@
      
       <!-- profile dropdown-menu here -->
       <li class="user-profile" ngbDropdown>
-        <span class="user-name">Deepak Walunj</span>
+        <span class="user-name">{{sharedService.getFullName()}}</span>
         <a href="javascript:void(0)" class="dropdown-toggle sidenav-fold-toggler-profile" id="userDropdown" ngbDropdownToggle title="User Profile"
           placement="left" ngbTooltip="User Profile">
           <img class="profile-img img-fluid" src="./assets/imgs/avatar/avatar.jpg" alt="User Profile Photograph">
@@ -24,7 +24,7 @@
           <li class="user-name-device">
             <img class="profile-img img-fluid" src="./assets/imgs/avatar/avatar.jpg" alt="User Profile Photograph">
             <div class="user-info">
-              <a href="javascript:void(0)" ngbDropdownItem title="User Name"> {{firstName}} {{lastName}} </a>
+              <a href="javascript:void(0)" ngbDropdownItem title="User Name"> {{sharedService.getFullName()}} </a>
               <!-- <div class="user-role">System Admin</div> -->
             </div>
           </li>
