--- a/ClientApp/src/app/shared/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/shared/sidebar/sidebar.component.html
@@ -1,29 +1,9 @@
-<!-- sidebar should be hide on role base -->
-<!-- Side Nav START -->
-<!---menu backdrop div start-->
-<div class="overlay" *ngIf="sharedService.getRoleId()==1"></div>
-<!---menu backdrop div end-->
+
+<!---menu old-->
+<!-- <div class="overlay" *ngIf="sharedService.getRoleId()==1"></div>
 <nav class="side-nav expand-lg" *ngIf="sharedService.getRoleId()==1">
   <div class="side-nav-inner">
     <ul class="side-nav-menu">
-      <!-- <li class="nav-item dropdown">
-          <a class="dropdown-toggle" routerLink="/proposal" routerLinkActive="active-link">
-              <i class="icon-forms"></i>
-              <span class="title">Master</span>
-          </a>
-      </li> -->
-      <!--<li class="nav-item dropdown">
-          <a class="dropdown-toggle" routerLink="/sample-form" routerLinkActive="active-link">
-              <i class="icon-forms"></i>
-              <span class="title">Sample Form</span>
-          </a>
-      </li>
-      <li class="nav-item dropdown">
-          <a class="dropdown-toggle" routerLink="/sample-list" routerLinkActive="active-link">
-              <i class="icon-forms"></i>
-              <span class="title">Sample List</span>
-          </a>
-      </li>-->
       <li class="nav-item dropdown">
         <a class="dropdown-toggle" routerLink="/master" routerLinkActive="active-link">
           <i class="icon-forms"></i>
@@ -36,12 +16,6 @@
           <span class="title">Inventory Material Master</span>
         </a>
       </li>
-      <!-- <li class="nav-item dropdown">
-          <a class="dropdown-toggle" routerLink="/login" routerLinkActive="active-link">
-              <i class="icon-logout"></i>
-              <span class="title">Logout</span>
-          </a>
-      </li> -->
     </ul>
     <div class="fold-menu-on-desktop">
       <a class="sidenav-fold-toggler" href="javascript:void(0);">
@@ -49,5 +23,104 @@
       </a>
     </div>
   </div>
-</nav>
+</nav> -->
 <!-- Side Nav END -->
+
+
+
+<div class="side-nav-inner">
+  <ul class="side-nav-menu">
+    <li class="nav-item"  (click)="sidebarToggle()"  [ngClass]="{ 'active': sampleForm.isActive }">
+      <a class="nav-link" routerLink="/sample-form" routerLinkActive #sampleForm="routerLinkActive">
+        <i class="far fa-user"></i>
+        <span class="menu-title">Sample Form</span>
+      </a>
+    </li>
+    <li class="nav-item"  (click)="sidebarToggle()" [ngClass]="{ 'active': users.isActive }">
+      <a class="nav-link" routerLink="/users" routerLinkActive #users="routerLinkActive">
+        <i class="far fa-user"></i>
+        <span class="menu-title">Users</span>
+      </a>
+    </li>
+
+<!--master-meenu-->
+    <li class="nav-item" [ngClass]="{'active' : clientMaster.isActive || inwardMaster.isActive}">
+      <a class="nav-link" (click)="uiBasicCollapsed = !uiBasicCollapsed" [attr.aria-expanded]="uiBasicCollapsed"
+        aria-controls="ui-list">
+        <i class="far fa-user"></i>
+        <span class="menu-title">Master</span>
+        <i class="fa fa-arrow-circle-right menu-arrow" aria-hidden="true"></i>
+      </a>
+      <div class="collapse" id="ui-list" [ngbCollapse]="!uiBasicCollapsed" [ngClass]="{ 'show': isShown }">
+        <ul class="nav flex-column sub-menu">
+          <!--client-menu-->
+          <li class="nav-item" (click)="uiBasicCollapsedIn = false" [ngClass]="{'subActive' : clientMaster.isActive}">
+            <a class="nav-link" (click)="uiBasicCollapsedr = !uiBasicCollapsedr"
+              [attr.aria-expanded]="uiBasicCollapsedr" aria-controls="ui-list">
+              <i class="far fa-circle"></i> <span class="menu-title"> Client Master</span>
+              <i class="fa fa-chevron-right menu-arrow" aria-hidden="true"></i>
+            </a>
+
+            <div class="collapse" id="ui-list" [ngbCollapse]="!uiBasicCollapsedr" [ngClass]="{ 'show': isShown }">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item">
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="master"
+                    routerLinkActive="active" #clientMaster="routerLinkActive"><i class="fas fa-circle"></i> Client</a>
+                </li>
+                
+              </ul>
+            </div>
+          </li>
+ <!--client-menu-end-->
+ <!--inward-menu-->
+          <li class="nav-item" (click)="uiBasicCollapsedr = false" [ngClass]="{'subActive' : inwardMaster.isActive || materialType.isActive || materialCompany.isActive || inwardAccessories.isActive}">
+            <a class="nav-link" (click)="uiBasicCollapsedIn = !uiBasicCollapsedIn"
+              [attr.aria-expanded]="uiBasicCollapsedIn" aria-controls="ui-list">
+              <i class="far fa-circle"></i> <span class="menu-title">Inward Material</span>
+              <i class="fa fa-chevron-right menu-arrow" aria-hidden="true"></i>
+            </a>
+
+            <div class="collapse" id="ui-list" [ngbCollapse]="!uiBasicCollapsedIn" [ngClass]="{ 'show': isShown }">
+              <ul class="nav flex-column sub-menu">
+                <li class="nav-item">
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/inward-master"
+                    routerLinkActive="active" #inwardMaster="routerLinkActive"><i class="fas fa-circle"></i> Inward Master</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/material-type"
+                    routerLinkActive="active" #materialType="routerLinkActive"><i class="fas fa-circle"></i>
+                    Material Type</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/material-company"
+                    routerLinkActive="active" #materialCompany="routerLinkActive"><i class="fas fa-circle"></i>
+                    Material Company</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="/inward-material/inward-accessories"
+                    routerLinkActive="active" #inwardAccessories="routerLinkActive"><i class="fas fa-circle"></i>
+                    Inward Accessories</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+<!--inward-menu-end-->
+
+
+
+    <li class="nav-item"  (click)="sidebarToggle()" [ngClass]="{ 'active': sampleList.isActive }">
+      <a class="nav-link" routerLink="/sample-list" routerLinkActive #sampleList="routerLinkActive">
+        <i class="far fa-user"></i>
+        <span class="menu-title">Sample List</span>
+      </a>
+    </li>
+  </ul>
+  <div class="fold-menu-on-desktop">
+    <a class="sidenav-fold-toggler" href="javascript:void(0);">
+      <i class="icon-left"></i>
+    </a>
+  </div>
+</div>
