--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -1,9 +1,7 @@
 /* You can import scss styles to this file only, Do not write any css/scss in this file */
-/*primary font*/
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
 
 /*primary font*/
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
 
 @import "assets/scss/variables";
 @import "node_modules/bootstrap/scss/bootstrap.scss";
