--- a/ClientApp/src/app/shared/header/header.component.html
+++ b/ClientApp/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- sidebar should be hide on role base -->
 
 <!-- header start -->
-<header class="header" *ngIf="sharedService.isLoggedIn()">
+<header class="header" >
   <div class="header-container">
     <div class="nav-logo">
       <!-- <a class="sidenav-fold-toggler" href="javascript:void(0);">
@@ -33,8 +33,8 @@
         </ul>
       </li>
       <li class="menu-toggle-li">
-        <a class="sidenav-fold-toggler" href="javascript:void(0);">
-          <i class="icon-menu"></i>
+        <a class="sidenav-fold-toggler" (click)="sidebarToggle()"  href="javascript:void(0);">
+          <i class="fas fa-bars"></i>
         </a>
       </li>
     </ul>
