--- a/ClientApp/src/assets/scss/_global.scss
+++ b/ClientApp/src/assets/scss/_global.scss
@@ -291,7 +291,7 @@ input[type=number] {
     .card-header {
         background-color: transparent;
         border: none;
-        border-left: 0.1875rem solid $orange;
+        //border-left: 0.1875rem solid $orange;
         border-radius: 0;
         display: flex;
         align-items: center;
@@ -300,6 +300,7 @@ input[type=number] {
         }
         h4 {
             flex: 1;
+            font-weight: 600;
         }
 
         @media screen and (max-width:441px){
