--- a/ClientApp/src/assets/scss/components/_forms.scss
+++ b/ClientApp/src/assets/scss/components/_forms.scss
@@ -483,6 +483,7 @@ select:disabled {
             position: absolute;
             left: 0;
             top: 0.5625rem;
+            color: #b9b8b8;
         }
         label {
             left: 1.375rem;
