--- a/ClientApp/src/app/modules/users/users-list/users-list.component.html
+++ b/ClientApp/src/app/modules/users/users-list/users-list.component.html
@@ -4,8 +4,6 @@
     <!--success message-->
 <ngb-alert *ngIf="successMessage" type="success" (close)="successMessage = null">{{ successMessage }}</ngb-alert>
 <!--success message-->
-    <h3 class="text-center mb-4">User List</h3>
-  
     <div class="card mb-4">
         <div class="card-header">
             <h4 class="float-left">Users</h4> 
@@ -14,159 +12,66 @@
                 <button class="btn  btn-primary float-right" (click)="openUserPopup(contentUserPopup)">Add User</button>
         </div>
         <div class="card-body">
-            <!--table search filter start-->
-            <form class="search-filter d-none d-md-block" [ngClass]="searchFilter ? 'd-block' : 'd-none'">
-                <div class="row  mb-2">
-                    <div class="col-12 col-sm-3">
-                        <div class="form-group has-float-label">
-                            <input class="form-control" type="text" id="searchName" placeholder="User Name">
-                            <label for="searchName">User Name</label>
-                        </div>
-                    </div>
-                   
-                    <div class="col-12 col-sm-3">
-                        <div class="form-group">
-                            <span class="plain-select">
-                                <select class="form-control" id="select1">
-                                    <option value="" selected>Select</option>
-                                    <option>Admin</option>
-                                    <option>Super Admin</option>
-                                    <option>User</option>
-                                    <option>Agent</option>
-                                </select>
-                                <label class="select-label">Access Rights</label>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-3 text-right">
-                        <div class="form-group mt-2">
-                            <button type="submit" class="btn btn-outline btn-outline-dark">Reset</button>
-                            <button type="submit" class="btn btn-outline btn-outline-dark">Search</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <!--table search filter end-->
             <!--table listing statrt hover-->
             <div id="no-more-tables">
                 <!-- This id used for responsive table -->
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col" style="width:18%" class="cursor">
-                                <div class="d-flex align-items-center"><span>User Name</span> <span>
-                                        &#9660;</span></div>
-                            </th>
-                           
-                            <th scope="col" style="width:21%" class="cursor">
-                                <div class="d-flex align-items-center"><span> Email</span> <span>&#9660;
-                                    </span></div>
-                            </th>
-                            <th scope="col" style="width:14%">
-                                <div class="d-flex align-items-center"><span>Access Rights</span></div>
-                            </th>
-                            
-                            <th scope="col" style="width:10%" class="text-center actions-td cursor">
-                                <div class="d-flex align-items-center justify-content-center"><span>Actions</span>
-                                    </div>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td data-title="User Name">Deepak123</td>
-                            <td data-title="Email">Deepak123@gmail.com</td>
-                            <td data-title="Access Rights">Admin</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)"> <i class="icon-edit orange" placement="top"
-                                            ngbTooltip="View" (click)="openUserPopup(contentUserPopup)"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="icon-remove orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="User Name">Deepak123</td>
-                            <td data-title="Email">Deepak123@gmail.com</td>
-                            <td data-title="Access Rights">Admin</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)"> <i class="icon-edit orange" placement="top"
-                                            ngbTooltip="View" (click)="openUserPopup(contentUserPopup)"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="icon-remove orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="User Name">Deepak123</td>
-                            <td data-title="Email">Deepak123@gmail.com</td>
-                            <td data-title="Access Rights">Admin</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)"> <i class="icon-edit orange" placement="top"
-                                            ngbTooltip="View" (click)="openUserPopup(contentUserPopup)"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="icon-remove orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="User Name">Deepak123</td>
-                            <td data-title="Email">Deepak123@gmail.com</td>
-                            <td data-title="Access Rights">Admin</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)"> <i class="icon-edit orange" placement="top"
-                                            ngbTooltip="View" (click)="openUserPopup(contentUserPopup)"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="icon-remove orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="User Name">Deepak1234</td>
-                            <td data-title="Email">Deepak123@gmail.com</td>
-                            <td data-title="Access Rights">Admin</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)"> <i class="icon-edit orange" placement="top"
-                                            ngbTooltip="View" (click)="openUserPopup(contentUserPopup)"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="icon-remove orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div class="d-flex justify-content-between align-items-center table-pagination">
-                    <div class="d-flex align-items-center">
-                        Show <span class="plain-select">
-                            <select class="form-control ml-2 mr-2" id="select3">
-                                <option>10</option>
-                                <option>20</option>
-                                <option>25</option>
-                            </select>
+              <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions">
+                <thead>
+                  <tr>
+                    <th scope="col" style="width:15%" class="cursor">
+                      <div class="d-flex align-items-center">
+                        <span>First Name</span> <span>
+                          &#9660;
                         </span>
-                        Entries
-                    </div>
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-end">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="javascript:void(0)" tabindex="-1"><i
-                                        class="icon-left"></i></a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
-                            <li class="page-item active"><a class="page-link" href="javascript:void(0)">2</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">4</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="javascript:void(0)"><i class="icon-right"></i></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
+                      </div>
+                    </th>
+                    <th scope="col" style="width:15%" class="cursor">
+                      <div class="d-flex align-items-center">
+                        <span>Last Name</span> <span>
+                          &#9660;
+                        </span>
+                      </div>
+                    </th>
+
+                    <th scope="col" style="width:25%" class="cursor">
+                      <div class="d-flex align-items-center">
+                        <span> Email</span> <span>
+                          &#9660;
+                        </span>
+                      </div>
+                    </th>
+                    <th scope="col" style="width:15%">
+                      <div class="d-flex align-items-center"><span>Role</span></div>
+                    </th>
+
+                    <th scope="col" style="width:10%" class="text-center actions-td cursor">
+                      <div class="d-flex align-items-center justify-content-center">
+                        <span>Actions</span>
+                      </div>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td data-title="First Name">Deepak123</td>
+                    <td data-title="Last Name">Deepak123</td>
+                    <td data-title="Email">Deepak123@gmail.com</td>
+                    <td data-title="Access Rights">Admin</td>
+                    <td data-title="Actions" class="action text-center actions-td">
+                      <div class="d-flex justify-content-center">
+                        <a href="javascript:void(0)">
+                          <i class="icon-edit orange" placement="top"
+                             ngbTooltip="View" (click)="openUserPopup(contentUserPopup)"></i>
+                        </a>
+                        <a href="javascript:void(0)">
+                          <i class="icon-remove orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i>
+                        </a>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+                
                 <!--table listing end-->
             </div>
         </div>
