--- a/ClientApp/src/app/shared/header/header.component.html
+++ b/ClientApp/src/app/shared/header/header.component.html
@@ -8,7 +8,9 @@
           <i class="icon-menu"></i>
       </a> -->
       <a class="logo" href="javascript:void(0)" title="Logo">
-        <img src="./assets/imgs/logos/logo.png" alt="Logo">
+          <!-- <img src="./assets/imgs/logos/logo.png" alt="Logo"> -->
+          <h4>GOPAL</h4>
+              <p>Computers</p>
       </a>
     </div>
     <ul class="nav-right">
@@ -28,7 +30,7 @@
               <!-- <div class="user-role">System Admin</div> -->
             </div>
           </li>
-          <li><a (click)="DoLogout()"><i class="icon-logout"></i> Logout</a>
+          <li><a (click)="DoLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
           </li>
         </ul>
       </li>
