--- a/ClientApp/src/app/shared/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/shared/sidebar/sidebar.component.html
@@ -47,7 +47,7 @@
     <li class="nav-item" [ngClass]="{'active' : clientMaster.isActive || inwardMaster.isActive}">
       <a class="nav-link" (click)="uiBasicCollapsed = !uiBasicCollapsed" [attr.aria-expanded]="uiBasicCollapsed"
         aria-controls="ui-list">
-        <i class="far fa-user"></i>
+        <i class="fab fa-buromobelexperte"></i>
         <span class="menu-title">Master</span>
         <i class="fa fa-arrow-circle-right menu-arrow" aria-hidden="true"></i>
       </a>
