--- a/ClientApp/src/assets/scss/components/_tables.scss
+++ b/ClientApp/src/assets/scss/components/_tables.scss
@@ -16,6 +16,7 @@
             td {
 				border-bottom: 0.0625rem solid $border;
 				vertical-align: middle;
+				color: #6c7293;
                 &.action {
                     a {
                         font-size:$font18;
