--- a/ClientApp/src/app/modules/login/login.component.html
+++ b/ClientApp/src/app/modules/login/login.component.html
@@ -1,7 +1,13 @@
-<form class="form-signin" [formGroup]="loginForm" (ngSubmit)="onLogin()" novalidate>
-  <div class="text-center logo">
-    <img src="./assets/imgs/logos/logo.png" alt="Logo">
-  </div>
+
+<div class="form-signin">
+<div class="text-center logo">
+  <!-- <img src="./assets/imgs/logos/logo.png" alt="Logo"> -->
+  <h4>GOPAL</h4>
+      <p>Computers</p>
+</div>
+
+<form [formGroup]="loginForm" (ngSubmit)="onLogin()" novalidate>
+  <h5 class="title">LOGIN</h5>
   <div class="row">
 
     <div class="col-12">
@@ -35,7 +41,9 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-6"> <button [disabled]="submitClick" class="btn btn-lg btn-primary">Login</button></div>
+    <div class="col-12 mb-3 text-right"><a href="javascript:void(0)">Forgot Password?</a></div>
+    <div class="col-12 text-center"> <button [disabled]="submitClick" class="btn btn-lg btn-primary login-button">LOGIN</button></div>
   </div>
   <div *ngIf="error" class="alert alert-danger">Please enter valid credentials</div>
 </form>
+</div>
