--- a/ClientApp/src/assets/scss/components/_side-nav.scss
+++ b/ClientApp/src/assets/scss/components/_side-nav.scss
@@ -3,9 +3,9 @@
 .side-nav {
   // width: 4.0625rem;
   width: 15.625rem;
-  background-color:#2f3c4e;
+  background-color:#1c0f3a;
   z-index: 1050;
-  top:0;
+  top:60px;
   bottom: 0px;
   left: 0;
   position: fixed;
