--- a/ClientApp/src/app/shared/header/header.component.html
+++ b/ClientApp/src/app/shared/header/header.component.html
@@ -4,13 +4,14 @@
 <header class="header" >
   <div class="header-container">
     <div class="nav-logo">
-      <!-- <a class="sidenav-fold-toggler" href="javascript:void(0);">
-          <i class="icon-menu"></i>
-      </a> -->
+     
       <a class="logo" href="javascript:void(0)" title="Logo">
           <!-- <img src="./assets/imgs/logos/logo.png" alt="Logo"> -->
           <h4>GOPAL</h4>
               <p>Computers</p>
+      </a>
+      <a class="sidenav-fold-toggler d-none d-xl-inline-flex" (click)="sidebarToggle()" href="javascript:void(0);">
+        <i class="fas fa-bars"></i>
       </a>
     </div>
     <ul class="nav-right">
