--- a/ClientApp/src/assets/scss/components/_buttons.scss
+++ b/ClientApp/src/assets/scss/components/_buttons.scss
@@ -5,6 +5,8 @@
     padding: 0.375rem 0.75rem;
     margin: 0;
     min-width: 5.25rem;
+    text-transform: uppercase;
+    font-weight: 600;
     cursor: pointer !important;
     &.btn-primary {
         color: $white;
