--- a/ClientApp/src/assets/scss/components/_forms.scss
+++ b/ClientApp/src/assets/scss/components/_forms.scss
@@ -471,8 +471,9 @@ select:disabled {
     }
     .form-control:placeholder-shown:not(:focus)+* {
         font-size: $font14;
-        opacity: 0.5;
+        //opacity: 0.5;
         top: 0.1875rem;
+        color: #6c7293;
     }
     .form-control:focus {
         outline: none;
@@ -483,7 +484,7 @@ select:disabled {
             position: absolute;
             right: 0;
             top: 0.5625rem;
-            color: #b9b8b8;
+            color: #6c7293;
         }
         label {
             left: 0;
