--- a/ClientApp/src/app/modules/inward-material/inward-master/inward-master.component.html
+++ b/ClientApp/src/app/modules/inward-material/inward-master/inward-master.component.html
@@ -33,7 +33,7 @@
                     <div class="col-12 col-sm-3 text-right">
                         <div class="form-group mt-2">
                             <button type="submit" class="btn btn-outline btn-outline-dark">Reset</button>
-                            <button type="submit" class="btn btn-outline btn-outline-dark">Search</button>
+                            <button type="submit" class="btn btn-outline btn-outline-primary">Search</button>
                         </div>
                     </div>
                 </div>
