--- a/ClientApp/src/assets/scss/components/_tables.scss
+++ b/ClientApp/src/assets/scss/components/_tables.scss
@@ -86,14 +86,14 @@
 			margin: 0 0.125rem;
 			.page-link {
 				border: 0;
-				color: $dark-blue;
+				color: $black-blue;
 				border-radius: 0.25rem;
 				padding: 0.200rem 0.525rem;
 			}
 			&.active {
 				.page-link {
-					background-color:  $dark-blue;
-					border-color:  $dark-blue;
+					background-color:  $black-blue;
+					border-color:  $black-blue;
 					color: $white;
 				}
 			}
