--- a/ClientApp/src/app/shared/header/header.component.html
+++ b/ClientApp/src/app/shared/header/header.component.html
@@ -31,7 +31,7 @@
               <!-- <div class="user-role">System Admin</div> -->
             </div>
           </li>
-          <li><a (click)="DoLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
+          <li><a href="javascript:void(0)" (click)="DoLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
           </li>
         </ul>
       </li>
