--- a/ClientApp/src/assets/scss/components/_header.scss
+++ b/ClientApp/src/assets/scss/components/_header.scss
@@ -178,7 +178,7 @@ header {
                         display: block;
                         color: $dark-grey;
                         &:hover {
-                            color: $orange;
+                            color: $primary;
                         }
                        i {
                         margin-right: 0.625rem;
