--- a/ClientApp/src/app/modules/login/login.component.html
+++ b/ClientApp/src/app/modules/login/login.component.html
@@ -1,4 +1,5 @@
 <form class="form-signin" [formGroup]="loginForm" (ngSubmit)="onLogin()" novalidate>
+  <ngb-alert *ngIf="error" type="danger" (close)="error = null">Please enter valid credentials</ngb-alert>
   <div class="text-center logo">
     <img src="./assets/imgs/logos/logo.png" alt="Logo">
   </div>
@@ -37,5 +38,5 @@
   <div class="row">
     <div class="col-6"> <button [disabled]="submitClick" class="btn btn-lg btn-primary">Login</button></div>
   </div>
-  <div *ngIf="error" class="alert alert-danger">Please enter valid credentials</div>
+  
 </form>
