--- a/ClientApp/src/assets/scss/_global.scss
+++ b/ClientApp/src/assets/scss/_global.scss
@@ -469,17 +469,18 @@ text-shadow: 1px 1px 3px rgba(150, 12, 251, 0.38);
  form {
     background-color: $white;
     width: 100%;
-    width: 30rem;
+    width: 25rem;
     padding: 20px;
     margin: auto;
     border-radius: 4px;
+    box-shadow: 1px 5px 24px 16px rgba(68, 102, 242, 0.05);
  }
     // box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.18), 1px 1px 4px 0 rgba(0, 0, 0, 0.24);
     .title {
-        font-size: 28px;
+        font-size: 22px;
         font-weight: 600;
         margin-bottom: 2rem;
-        color: #1c0f3a;
+        color: $black-blue;
     }
     .logo {
       
@@ -575,8 +576,6 @@ text-shadow: 1px 1px 3px rgba(150, 12, 251, 0.38);
 
 
 /* media css for main layout*/
-
-
 
 @media only screen and (max-width: 1024px) {
     .layout {
@@ -684,6 +683,9 @@ text-shadow: 1px 1px 3px rgba(150, 12, 251, 0.38);
     }
     .form-signin {
         max-width: 25rem;
+        form {
+            width: 100%;
+        }
     }
     .spinner {
         display: flex;
